# HomeWorkDRF

./: .coverage  .env.template  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule.dir  coverage.xml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0002_initial.py  0003_alter_course_options_course_description_course_owner_and_more.py  0003_subscription.py  0004_course_last_notification_sent.py
services/: stripe_service.py
users/: filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: create_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_payment_course_payment_lesson.py
