[project]
name = "homeworkdrf"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django (>=5.0,<5.2)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-filter (>=24.0,<25.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "drf-yasg (>=1.21.15,<2.0.0)",
    "stripe (>=15.0.1,<16.0.0)",
    "eventlet (>=0.41.0,<0.42.0)",
    "redis (==5.0.1)",
    "celery (==5.4.0)",
    "django-celery-beat (==2.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
