[project]
name = "homeworkdrf"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.0,<5.2)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers>=4.4.0,<5.0.0",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "python-dotenv>=1.0.0,<2.0.0",
    "django-filter (>=24.0,<25.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "drf-yasg (>=1.21.15,<2.0.0)",
    "stripe (>=15.0.1,<16.0.0)",
    "eventlet (>=0.41.0,<0.42.0)",
    "redis (==5.0.1)",
    "celery (==5.4.0)",
    "django-celery-beat (==2.9.0)",
    "requests>=2.31.0,<3.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "autoflake (>=2.3.3,<3.0.0)"
]
[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''
[tool.isort]
# максимальная длина строки
line_length = 119
